syntax = "proto3";

package hdsdk.protobuf;

option go_package = "github.com/hdget/hdsdk/protobuf";

// 按limit分页
message ListParam {
  int64 page = 1;      // 页码
  int64 pageSize = 2;  // 每页数量
}

// 按last primary key分页
message NextParam {
  int64 lastPk = 1;             // 上一次返回列表最后的主键
  int64 pageSize = 2;           // 每页数量
}
